Changed default city to Atlanta

--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
 
         <small>
           <a
-            href="https://github.com/saikandregula/shecodesplus/tree/main/week-7/vanilla_weather_app"
+            href="https://github.com/saikandregula/vanilla_weather_app"
             target="_blank"
-            >Open Source Code</a
-          >by Sai Satya
+            >Open Source Code
+          </a>
+          by Satya Kandregula
         </small>
       </div>
     </div>
